@@ -1,3 +1,8 @@
+2011-11-08  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* configure.in src/set.c: Use nl_langinfo(CODESET) to find the encoding.
+	This hopefully works around non-standard encoding names used by Solaris.
+
 2011-11-08  Bastian Maerkisch  <bmaerkisch@web.de>
 
 	* doc/gnuplot.doc [New features]: Document new cairolatex and
